[metadata]
name = expyct
;version = ... retrieved from expyct.__init__
author = Hummingbird Technologies
author_email = dev@hummingbirdtech.com
license = MIT
description = Partial matching of any object
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HummingbirdTechGroup/expyct
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
project_urls =
    Source Code = https://github.com/HummingbirdTechGroup/expyct
    Documentation = https://hummingbirdtechgroup.github.io/expyct/

[options]
packages = expyct
python_requires = >=3.6
test_suite = tests
setup_requires =
    setuptools
install_requires =

[flake8]
max-line-length = 100

[mypy]
# Prevent https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-type-hints-for-third-party-library
ignore_missing_imports = True
