[metadata]
name = expyct
;version = ... retrieved from expyct.__version__.VERSION
author = mthaak
author_email = mthaak.dev@gmail.com
license = MIT
description = Partial matching of any object
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mthaak/expyct
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
project_urls =
    Source Code = https://github.com/mthaak/expyct
    Documentation = https://mthaak.github.io/expyct/

[options]
packages = expyct
python_requires = >=3.6
test_suite = tests
setup_requires =
    setuptools

[flake8]
max-line-length = 100

[mypy]
# Prevent https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-type-hints-for-third-party-library
ignore_missing_imports = True
